<resources>
    <string name="app_name">Destructo Block</string>
    <string name="action_settings">Settings</string>
    <string name="newGame_String">New Game</string>
    <string name="loadGame_String">Load Game</string>
    <string name="playerName">Player Name:</string>
    <string name="bgmString">BGM:</string>
    <string name="sfxString">SFX:</string>
    <string name="muteText">Mute:</string>
    <string name="noRadioBoxString">No</string>
    <string name="yesRadioBoxString">Yes</string>
    <string name="saveString">Save Settings</string>
    <string name="cancelString">Cancel</string>
    <string name="tutorialString">Tutorial:</string>
    <string name="offString">Off</string>
    <string name="onString">On</string>
    <string name="scoreString">Score: 0</string>
    <string name="sampleScore">Next Level: 0 of 50</string>
    <string name="backToMenu">End Game</string>
    <string name="nextLevel">Next Level</string>
    <string name="resetScore">Reset Scores:</string>
</resources>
