<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plainbackground">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerName"
            android:id="@+id/textView"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameTextSettings"
            android:layout_weight="1"
            android:layout_marginRight="16dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muteText"
            android:id="@+id/textView4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="52dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/muteRadio">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noRadioBoxString"
                android:id="@+id/muteNo"
                android:checked="true"
                android:layout_marginRight="96dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesRadioBoxString"
                android:id="@+id/muteYes"
                android:checked="false" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetScore"
            android:id="@+id/textView2"
            android:layout_marginLeft="16dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:text="Reset"
            android:id="@+id/resetButton"
            android:layout_marginLeft="100dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="222dp"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelString"
            android:id="@+id/settingsCancelButton"
            android:layout_marginRight="38dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/saveString"
            android:id="@+id/settingsSaveButton" />
    </LinearLayout>
</LinearLayout>